# rev

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt
engine/: CMakeLists.txt  makefile  shader.pxl
engine/benchmark/: matrix.cpp
engine/core/: event.h  string_util.cpp  string_util.h  types.h
engine/core/platform/: cmdLineParser.cpp  cmdLineParser.h  osHandler.h
engine/core/resources/: dataConstructible.h  namedResourceMgr.h
engine/core/tasks/: threadPool.h
engine/core/tools/: log.h  profiler.cpp  profiler.h
engine/game/animation/: animator.h  skeleton.h
engine/game/application/: base3dApplication.cpp  base3dApplication.h
engine/game/geometry/: modelAsset.h
engine/game/physics/: bulletMath.h  physicsWorld.cpp  physicsWorld.h  rigidBody.h
engine/game/scene/: ComponentLoader.cpp  LightComponent.h  camera.h  component.cpp  component.h  sceneNode.cpp
engine/gfx/: ImGui.cpp  ImGui.h  Image.h  ImageSampler.h  Texture.cpp  Texture.h  image.cpp  types.h
engine/gfx/backend/: ComputePipeline.cpp  Context.cpp  Context.h  DescriptorSet.cpp  DescriptorSet.h  Device.h  FrameBufferManager.h  ScopedCommandBuffer.h  commandQueue.h  computePipeline.h  namedResource.h  rasterPipeline.cpp  rasterPipeline.h
engine/gfx/renderGraph/: frameBufferCache.h
engine/gfx/renderer/: EnvironmentProbe.cpp  EnvironmentProbe.h  ForwardPass.cpp  ForwardPass.h  ForwardRenderer.cpp  ForwardRenderer.h  RasterHeap.cpp  RasterHeap.h  RasterQueue.h  RasterScene.cpp  RasterScene.h  RenderItem.h  RenderPass.cpp  RenderPass.h  ShadowMapPass.cpp  ShadowMapPass.h
engine/gfx/scene/: EnvironmentProbe.cpp  Material.h
engine/gfx/shaders/: computeShader.h
engine/include/vma/: vk_mem_alloc.h
engine/input/: pointingInput.h
engine/input/keyboard/: keyboardInput.h
engine/lib/cjson/: json.cpp  json.h  json.inl  parser.cpp  serializer.cpp
engine/lib/glfw/: glfw3.lib
engine/lib/vhacd/: CMakeLists.txt
engine/math/: linear.h  noise.cpp  noise.h
engine/math/algebra/: matrixExpr.h  matrixView.h  vector.h
engine/math/geometry/: mesh.cpp  mesh.h
engine/network/http/: httpMessage.cpp  httpRequest.cpp  httpRequest.h  httpResponse.cpp  httpResponse.h  httpServer.h
engine/network/socket/: socket.cpp  socketLinux.h  socketServer.cpp  socketServer.h
engine/prj/vs13/: engine.vcxproj  engine.vcxproj.filters
engine/revAndroid/: revAndroid.cpp  revAndroid.h  revAndroid.vcxproj  revAndroid.vcxproj.filters
engine/src/: engine.cpp  engine.h  engine.inl
engine/src/core/: event.h  log.h  string_util.h  types.h
engine/src/data/: direct.pxl  solidColor.pxl  staticModel.vtx
engine/src/game/: logicComponent.h  logicLayer.h  sceneLoader.cpp  sceneLoader.h  textureManager.h
engine/src/graphics/: Image.h  ImageSampler.h  RasterHeap.cpp  RasterHeap.h  RasterMesh.h  image.cpp  types.h
engine/src/input/: pointingInput.cpp  pointingInput.h
engine/src/math/: constants.h  filters.cpp  filters.h  linear.h  noise.cpp  noise.h  numericTraits.h
engine/src/util/: string_util.h
player/: CMakeLists.txt  CamEstimate.h  HeadTracker.cpp  HeadTracker.h  ImageProvider.cpp  ImageProvider.h  ImuProvider.cpp  ImuProvider.h  androidPlayer.sln  editor.h  gameProject.h  main.cpp  player.cpp  player.h
player/androidPlayer/: androidPlayer.sln
player/androidPlayer/androidPlayer.NativeActivity/: androidPlayer.NativeActivity.vcxproj  androidPlayer.NativeActivity.vcxproj.filters  android_native_app_glue.c  android_native_app_glue.cpp  android_native_app_glue.h  main.cpp
player/androidPlayer/androidPlayer.Packaging/: androidPlayer.Packaging.androidproj
player/editor/: editor.h
player/src/: main.cpp  player.cpp  player.h
player/src/editor/: editor.cpp  editor.h
samples/Doom3/: CMakeLists.txt
samples/Doom3/src/: main.cpp
samples/HopperFW/: CMakeLists.txt
samples/HopperFW/src/: Serial.cpp  main.cpp  serial.h
samples/ShaderToy/: CMakeLists.txt  ShaderToy.cpp  ShaderToy.h  main.cpp
samples/ShaderToy/assets/: gtao.fx  shaderToy.fx
samples/ShaderToy/shaders/: shaderToy.frag
samples/ShaderToy/src/: main.cpp  renderer.h
samples/VRSample/: CMakeLists.txt  VRAndroid.sln  camLog.csv  debug.pxl  forward.pxl  forward.vtx  main.cpp  player.cpp  player.h  profiler.txt  scene.DAE  shader.pxl  shader.vtx  shadow.pxl  skybox.pxl  solution.xml
samples/VRSample/20170628_215820/: 20170628_215820-backup.csv  20170628_215820.csv  camLog.csv  graphs.py
samples/VRSample/data/: albedo.mat  albedo.tex  barrel.FBX  barrel.rmd  buildShaders.bat  cubes.FBX  cubes.scn  floorPlane.FBX  floorPlane.max  floorPlane.rmd  forward.fx  frag.spv  ibl_brdf.hdr  metal-rough.fx  pbr.effect  pbr.fx  pbr.glsl  physics.tex  pixel-forward.fx  plainColor.fx  quad.FBX  quad.rmd  shaderCode.txt  shadowMap.fx  simplePBR.fx  sky.fx  skybox.glsl  skybox.tex  solidWhite.mat  sponza.json  sponzaLow.FBX  sponzaLow.rmd  sponzaLow.scn  testScene.FBX  unitSphere.FBX  unitSphere.max  unitSphere.rmd  vert.spv  vertex-forward.fx  vrScene.scn  (+4 more)
samples/VRSample/test/: circle.csv  circle.py  test.pyproj  test.sln
samples/Vulkraft/: CMakeLists.txt
samples/Vulkraft/src/: main.cpp  voxelOctree.cpp  voxelOctree.h
samples/deferredRendering/: CMakeLists.txt  main.cpp  shader.vtx
samples/gltfViewer/: CMakeLists.txt
samples/gltfViewer/data/: vertex.hlsl
samples/gltfViewer/shaders/: envProbe.cshader  fullScreen.vert  gbuffer.frag  gbuffer.vert  material.glsl  pbr.glsl  postPro.frag  pushConstants.glsl  ui.vert
samples/gltfViewer/src/: RenderPass.h  Renderer.cpp  Renderer.h  hybridRenderer.h  main.cpp  pathTraceRenderer.h  player.cpp  player.h
samples/octreeRayCast/: CMakeLists.txt
samples/pluto/: CMakeLists.txt
samples/pluto/shaders/: gbuffer.frag  gbuffer.vert  lighting.frag  postPro.frag  pushConstants.glsl
samples/pluto/src/: ProceduralTerrain.cpp  ProceduralTerrain.h  (+3 more)
tools/: CMakeLists.txt
tools/gltfOptimizer/: CMakeLists.txt
tools/modelProcessor/: modelProcessor.cpp
tools/probe/: CMakeLists.txt  ImageOperations.cpp  ImageOperations.h  Materials.cpp  Materials.h  main.cpp
tools/shaderProcessor/: main.cpp  shaderProcessor.hpp
(+1381 files in other folders)
